services/elkspark/02.kibana.service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: kibana
  namespace: elkspark
spec: 
  type: NodePort
  selector: 
    app: kibana
  ports: 
    - 
      name: http-5601
      port: 5601
      targetPort: 5601
      protocol: TCP
