services/elkspark/03.kibana.ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: kibana
 namespace: elkspark
spec:
 rules:
   - host: kibana.k8s.proserve.nl
     http:
       paths:
         - path: /
           backend:
             serviceName: kibana
             servicePort: 5601
